# nomos

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.local.yml  docker-compose.yml  governance.yml  setup.sh
.github/workflows/: ci.yml
examples/kafka/: governance.yml
examples/kafka/knowledge/: failures.md  successful.md
mcp-server/: .env.example  Dockerfile  README.md  behave.ini  fly.toml  pyproject.toml
mcp-server/features/kafka/: rbac-bindings.feature  sa-naming.feature  topic-naming.feature
mcp-server/src/: __main__.py  config.py  context.py  main.py  middleware.py  server.py
mcp-server/src/commands/: check_promotion.py  install_hooks.py  scaffold.py
mcp-server/src/loaders/: base_loader.py  github_loader.py  local_loader.py  team_loader.py
mcp-server/src/models/: adr.py  check.py  config.py  constitution.py  convention.py  helm.py  rollout.py  validation.py
mcp-server/src/routes/: copilot.py  incident.py  validate.py
mcp-server/src/tools/: adr_tools.py  check_tools.py  constitution_tools.py  convention_tools.py  helm_tools.py  knowledge_tools.py  rollout_tools.py
mcp-server/src/validators/: rbac.py  rest_path.py  rollout.py  sa_naming.py  schema.py  service_name.py  topic.py
mcp-server/tests/: test_availability.py  test_incident.py  test_loaders.py  test_rollout.py  test_tools.py
