[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "nomos"
version = "0.1.0"
description = "Constitutional Governance server — exposes ADRs, constitutions, naming conventions, and executable compliance checks via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["governance", "mcp", "ai-agents", "platform-engineering", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/nomos"
Documentation = "https://github.com/your-org/constitutional-governance"
Repository = "https://github.com/your-org/nomos"
"Bug Tracker" = "https://github.com/your-org/nomos/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "behave>=1.2.6",
]

[project.scripts]
nomos = "src.main:main"
nomos-validate = "src.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
